a改連到茅點

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <header>
         <div class="nav d-lg-flex justify-content-center">
@@ -277,10 +276,10 @@
             </div>
         </section>
         <div>
-            <a href="" class="btn-buy fix-btns">
+            <a href="#section9" class="btn-buy fix-btns">
 我要購買
               </a>
-              <a href="" class="btn-contact fix-btns">
+              <a href="#section10" class="btn-contact fix-btns">
 聯絡客服
               </a>
               <a id="goTop" href=""  class="btn-top fix-btns">
