增加標題/logo&微調

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>樂泥科技 地不漏深層導水盤</title>
+    <link rel="icon" href="./image/logo_02.ico" type="image/x-icon" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -261,12 +262,12 @@
             <div class="container-fluid p-0">
                 <div class=" section10-flex-lg-row justify-content-center">
                     <div class="d-flex p-0">
-                        <a class="awithlink" href="https://uni-dry.com/"><img src="./image/h01.png" alt="樂泥科技"></a>
-                        <a class="awithlink" href="https://www.facebook.com/groups/521503622636682/"><img src="./image/h02.png" alt="FB"></a>
+                        <a class="awithlink" target="_blank" href="https://uni-dry.com/" ><img src="./image/h01.png" alt="樂泥科技"></a>
+                        <a class="awithlink" target="_blank" href="https://www.facebook.com/groups/521503622636682/"><img src="./image/h02.png" alt="FB"></a>
                     </div>
                     <div class="d-flex p-0">
-                        <a class="awithlink" href="https://www.instagram.com/unidrytech/"><img src="./image/h03.png" alt="IG"></a>
-                        <a class="awithlink" href="https://www.youtube.com/watch?v=Qf7xl5LZFV4"><img src="./image/h04.png" alt="youtube"></a>
+                        <a class="awithlink" target="_blank" href="https://www.instagram.com/unidrytech/"><img src="./image/h03.png" alt="IG"></a>
+                        <a class="awithlink" target="_blank" href="https://www.youtube.com/watch?v=Qf7xl5LZFV4"><img src="./image/h04.png" alt="youtube"></a>
                     </div>
                     <div class="d-flex p-0">
                         <a><img src="./image/h05.png" alt="@688yjcik"></a>
