改顏色間距

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     </ol>
                     <div class="carousel-inner">
                         <div id="banner01" class="carousel-item active">
-                            <img class="showinmobile" src="./image/banner_02_s.jpg" alt="First slide">
+                            <img class="showinmobile" src="./image/banner_02_ss.jpg" alt="First slide">
                             <img class="hideinmobile" src="./image/banner_02.jpg" alt="First slide">
                         </div>
                         <div id="banner02" class="carousel-item">
-                            <img class="showinmobile" src="./image/banner_01_s.jpg" alt="Second slide">
+                            <img class="showinmobile" src="./image/banner_01_ss.jpg" alt="Second slide">
                             <img class="hideinmobile" src="./image/banner_01.jpg" alt="Second slide">
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                 <img class="titlepic" src="./image/tt02.png" alt="">
             </div>
             <div class="d-lg-flex section7-flex-lg-row justify-content-around">
-                <div class="d-flex  align-items-center  boxfortwopics">
+                <div class="d-flex  boxfortwopics">
                     <div class="d-flex flex-column align-items-center col-md-6 col-lg-6 section7-pics"><img
                             src="./image/f01.png" alt="">
                         <div class="d-flex mx-lg-5">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex  align-items-center  boxfortwopics">
+                <div class="d-flex  boxfortwopics">
                     <div class="d-flex flex-column align-items-center col-md-6 col-lg-6 section7-pics"><img
                             src="./image/f03.png" alt="">
                         <div class="d-flex mx-lg-5">
