--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="nav d-lg-flex justify-content-center">
             <input type="checkbox" id="nav-check">
-            <div class="nav-header col-lg-4 col-md-3">
+            <div class="nav-header header-left  ">
               <div class="nav-title">
                 <h1><img class="logo" src="./image/logo.png" alt="UniDry"></h1>
               </div>
@@ -28,7 +28,7 @@
                 <span></span>
               </label>
             </div>
-            <div class="nav-links col-lg-6 col-md-9 d-lg-flex justify-content-end">
+            <div class="nav-links header-right   d-lg-flex justify-content-end">
                 <a class="nav-link" href="#section2" target="_self">影片介紹</a>
                 <a class="nav-link" href="#section3" target="_self">產品優勢</a>
                 <a class="nav-link" href="#section4" target="_self">發明專利</a>
